# Wasim_CMSIS_Stream

./: .gitignore  .gitmodules  AppNodes.h  CMakeLists.txt  README.md  StreamKernel.cc  custom.h  free_queue.h  gen.sh  graph.py  osxmain.cpp  scheduler.cpp  scheduler.h  server.py  test.dot  untitled.cpp
build_cmake/: build.sh  clean.sh
build_wasm/: build.sh  clean.sh
examples/: example1.py  example2.py  example3.py  example4.py
include/: Enveloppe.hpp  Filter.hpp  Generator.hpp  Noise.hpp  Operator.hpp  Oscillator.hpp  Params.hpp  Sam.hpp  Sink.hpp
include/MIDI/: MIDIEnv.hpp  MIDISeq.hpp  MIDIWav.hpp  instruments.hpp  synth_Playtune_waves.hpp
lib/: wasm-audio-helper.js
nodes/: SeqParser.py  effect.py  enveloppe.py  filter.py  generator.py  generic.py  instrument.py  noise.py  operator.py  oscillator.py  params.py  sam.py  settings.py  sink.py
source/: instruments.cpp  synth_Playtune_waves.cpp
source/Songs/: BohemianRhapsody.cpp  Ghostbusters.cpp  ImperialMarch.cpp  Overture.cpp  PinkPanther.cpp  ToccataAndFugueInDMinor.cpp  WeAreTheChampion.cpp
stream_demo/: basic-processor.js  constants.js  index.html  main.js  netlify.toml  stream_kernel.js  stream_kernel.ww.js  style.css  worker.js
